# tauri-secure-desk

./: LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs
docs/: README.md  developer.md  roadmap.md  user-guide.md
src/: App.tsx  error-page.tsx  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/src/: lib.rs  main.rs
src/components/: apps-table.tsx  content-tabs.tsx  dashboard-stats.tsx  navbar.tsx  os-updates-table.tsx  theme-switcher.tsx
src/routes/: About.tsx  App.tsx  Applications.tsx  OperatingSystem.tsx  System.tsx
src/services/: applications-data.ts  dashboard-data.ts  os-data.ts
