[package]
name = "app"
version = "0.1.0"
description = "Secure Desk - A Tauri App"
authors = ["cecildt"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "securedesk_app_lib"
crate-type = ["staticlib", "cdylib", "rlib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
tauri = { version = "2.2.3", features = [] }
tauri-plugin-opener = "2"
winreg = "0.55.0"
wmi = "0.14.4"
futures = "0.3.31"
windows = "0.59.0"
powershell_script = "1.1.0"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"

# [features]
# # by default Tauri runs in production mode
# # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
# default = ["custom-protocol"]
# # this feature is used for production builds where `devPath` points to the filesystem
# # DO NOT remove this
# custom-protocol = ["tauri/custom-protocol"]
