[package]
name = "app"
version = "0.1.0"
description = "Secure Desk - A Tauri App"
authors = ["cecildt"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.59"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["dialog-all", "fs-all", "process-all", "shell-open", "window-all"] }
winreg = "0.55"
wmi = "0.17"
futures = "0.3"
windows = "0.61"
powershell_script = "1.1"

# [features]
# # by default Tauri runs in production mode
# # when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
# default = ["custom-protocol"]
# # this feature is used for production builds where `devPath` points to the filesystem
# # DO NOT remove this
# custom-protocol = ["tauri/custom-protocol"]

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
